[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Slider.gd" type="Script" id=1]

[node name="VBox" type="VBoxContainer"]
margin_right = 245.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Labels" type="HBoxContainer" parent="."]
margin_right = 245.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Name" type="Label" parent="Labels"]
margin_right = 122.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Name"
align = 1
valign = 1

[node name="DisplayValue" type="Label" parent="Labels"]
margin_left = 122.0
margin_right = 245.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Display Value"
align = 1
valign = 1

[node name="HBox" type="HBoxContainer" parent="."]
margin_top = 55.0
margin_right = 245.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSlider" type="HSlider" parent="HBox"]
margin_right = 185.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Reset" type="Button" parent="HBox"]
margin_left = 189.0
margin_right = 245.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
text = "Reset"

[connection signal="value_changed" from="HBox/HSlider" to="." method="on_slider_value_changed"]
[connection signal="pressed" from="HBox/Reset" to="." method="on_reset_pressed"]
